src/main/java/com/example/demo/core/error/exeption/BadRequestException.java
package com.example.demo.core.error.exeption;


import com.example.demo.core.error.ErrorCode;

public class BadRequestException extends BusinessException {

    public BadRequestException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}
